--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Dim Sky Science Company</h4>
             <!-- FOOTER INNER -->
             <div class="footer-inner scroll-animated-from-bottom">
  <p>@Dim Sky Science Company&nbsp;<a href="#">D.S.S.C.黯空科技</a></p>
-              
+            </br>  <a href="diejia.html">特殊鸣谢</a>
                
        <footer>
   <!-- 页脚内容 -->
