--- a/001.html
+++ b/001.html
@@ -78,9 +78,9 @@
                 <p class="scroll-animated-from-bottom">
 
 曳，21岁。Kilden til visdom大学博士在读，有丰富的科研成果，2375年杰出贡献奖-生物机械方面得主。
-研究成果：关键神经连接因子Ynh1，眼部神经系统机械义体介入方式，兽人基因编辑技术，兽人骨骼发育矫正技术，AR芯片高度集成技术
-联系方式：同上
-一句话：午饭吃鱼豆腐吧鱼豆腐鱼豆腐……哪里有好吃的鱼豆腐……</p>
+<br />研究成果：关键神经连接因子Ynh1，眼部神经系统机械义体介入方式，兽人基因编辑技术，兽人骨骼发育矫正技术，AR芯片高度集成技术
+<br />联系方式：同上
+<br />一句话：午饭吃鱼豆腐吧鱼豆腐鱼豆腐……哪里有好吃的鱼豆腐……</p>
                
             
             </div>
