--- a/002.html
+++ b/002.html
@@ -78,9 +78,9 @@
 
 
 菘，23岁。Kilden til visdom大学博士在读，有丰富的科研成果，2375年杰出贡献奖-生物机械方面得主。
-研究成果：关键神经连接因子QusH1，机械与神经连接具体可行性方法，眼部神经系统机械义体介入方式，兽人基因编辑技术，兽人骨骼发育矫正技术
-联系方式：你猜
-一句话：科技发展永远代表着人类能力上限的又一次进步，但困扰人类的根本问题还是，今天中午吃什么？</p>
+<br />研究成果：关键神经连接因子QusH1，机械与神经连接具体可行性方法，眼部神经系统机械义体介入方式，兽人基因编辑技术，兽人骨骼发育矫正技术
+<br />联系方式：你猜
+<br />一句话：科技发展永远代表着人类能力上限的又一次进步，但困扰人类的根本问题还是，今天中午吃什么？</p>
                
             
             </div>
