--- a/004.html
+++ b/004.html
@@ -78,9 +78,9 @@
                 <p class="scroll-animated-from-bottom">
 
 镧，26岁。Kilden til visdom大学博士在读，负有丰富的科研成果，2375年杰出贡献奖-生物实践方面得主。
-研究成果：兽人基因编辑技术，兽人骨骼发育矫正技术，后天异体改造
-联系方式：抬头看天，如果有缘的话，或许可以看到我？
-一句话：事已至此，不如去码头整点鱼豆腐。</p>
+<br />研究成果：兽人基因编辑技术，兽人骨骼发育矫正技术，后天异体改造
+<br />联系方式：抬头看天，如果有缘的话，或许可以看到我？
+<br />一句话：事已至此，不如去码头整点鱼豆腐。</p>
                
             
             </div>
