--- a/005.html
+++ b/005.html
@@ -78,9 +78,9 @@
                 <p class="scroll-animated-from-bottom">
 
 牛汼，22岁。Kilden til visdom大学硕士在读。
-研究成果：兽人天赋与自然感知
-联系方式：如果你遇到一个背着大包小包的旅行者的话，或许就是我哦~
-一句话：大地跟我说今天午饭吃鱼豆腐！
+<br />研究成果：兽人天赋与自然感知
+<br />联系方式：如果你遇到一个背着大包小包的旅行者的话，或许就是我哦~
+<br />一句话：大地跟我说今天午饭吃鱼豆腐！
 </p>
                
             
