--- a/index.html
+++ b/index.html
@@ -127,24 +127,18 @@
 
         </div>
         <!-- /HERO -->
-            <div class="container-fluid">
-            	<h2 style="text-align: center;">D.S.S.C.黯空科技</h2>
-      
-<h4 style="text-align: center;">
-Dim Sky Science Company</h4>
-       <h4></br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究生物和科技结合的实验室势力。</br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;不相信任何鬼神之说，只追求真理，坚信科技的力量，想要达成理想中的世界。</br>
-未来是什么样的，全都依靠我们现在所做出的每一分每一秒的努力。</br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;不做违法的基因交易，只是试图探索一种生物和机械的共同未来。其中不乏有心思不正的分子创造了兽人这种基因杂合的物种，但很快被清除。时至今日，黯空仍在不断的与违法做基因改造手术的不良分子作斗争，同时保护已经受害的兽人，与青山阁有着良好的合作关系。
-</br>目前伟大成就：延缓衰老、延长人类生命、机械义体与人类神经系统连接
-</br>相关报道：[[关于近期发生的一些问题做出的解释]]</br>
-</br>
-</h4>
-
-
- </br></br>
- 
+           <div class="container-fluid">
+    <h2 style="text-align: center;">D.S.S.C.黯空科技</h2>
+    <h4 style="text-align: center;">Dim Sky Science Company<br /></h4>
+    <div style="text-align: left; margin: 0 100px; ">
+        <h4 style="margin-bottom: 20px; text-indent: 2em;">研究生物和科技结合的实验室势力。</h4>
+        <h4 style="margin-bottom: 20px; text-indent: 2em;">不相信任何鬼神之说，只追求真理，坚信科技的力量，想要达成理想中的世界。</h4>
+        <h4 style="margin-bottom: 20px; text-indent: 2em;">未来是什么样的，全都依靠我们现在所做出的每一分每一秒的努力。</h4>
+       <h4 style="margin-bottom: 20px; text-indent: 2em;">不做违法的基因交易，只是试图探索一种生物和机械的共同未来。其中不乏有心思不正的分子创造了兽人这种基因杂合的物种，但很快被清除。时至今日，黯空仍在不断的与违法做基因改造手
+       	术的不良分子作斗争，同时保护已经受害的兽人，与青山阁有着良好的合作关系。</h4>
+     <h4 style="margin-bottom: 20px; text-indent: 2em;">目前伟大成就：延缓衰老、延长人类生命、机械义体与人类神经系统连接</h4>
+      <h4 style="margin-bottom: 20px; text-indent: 2em;">相关报道：[[关于近期发生的一些问题做出的解释]]</h4>
+    </div>
 </div>
      
 <br />
